# find-symlinks

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml  update-tap.yml
scripts/: build.sh  bump-version.sh  make-formula.sh  set-version.sh
src/: main.rs
