[package]
name = "find-symlinks"
version = "1.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
crossterm = "0.27"
ignore = "0.4"
indicatif = "0.17"
rayon = "1.10"
serde = { version = "1", features = ["derive" ] }
serde_json = "1"
num-format = "0.4"

[[bin]]
name = "find-symlinks"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
